--- a/resume.html
+++ b/resume.html
@@ -9,8 +9,7 @@
     <h1>Divya, Web Developer</h1>
     <h2 class="section-title">Summary of Qualifications</h2>
     <ul>
-      <li>Experience as a Freelance Web Developer</li>
-      <li>Experience in HTML,CSS, nad JavaScript</li>
+      <li>Experience in HTML,CSS and JavaScript</li>
       <li>Bachelor's of Engineering in IS</li>
     </ul>
     <h2 class="section-title">Education</h2>
